Some fixes and optimizations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,10 @@
     </string-array>
     <string name="textViewIdade">Digite sua idade:</string>
     <string name="hint">Ex.: 18</string>
-    <string name="button">Calcular</string>
-    <string name="mensagem_faltam_anos">Faltam %1$d anos para a aposentadoria.</string>
-    <string name="mensagem_resultado">Faltam $resultado anos para você se aposentar!</string>
-    <string name="mensagem_ja_aposentado">Você já está aposentado!</string>
-    <string name="mensagem_idade_invalida">Idade inválida. Por favor, insira uma idade válida.</string>
     <string name="textViewContrib">Digite sua contribuição em anos:</string>
     <string name="hintContrib">Ex.: 10</string>
+    <string name="button">Calcular</string>
+    <string name="mensagem_faltam_anos">Faltam %1$d anos para a sua aposentadoria.</string>
+    <string name="mensagem_ja_aposentado">Você já está aposentado!</string>
+    <string name="mensagem_dados_invalidos">Idade / Contribuição inválidos</string>
 </resources>
